# Whist

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  conductor.json  package.json  update_pr_40.sh
.cursor/rules/: pre-commit-order.mdc  verify-before-finish.mdc  vibe-kanban-project.mdc
angular-web/: .eslintrc.json  .gitignore  .vercelignore  README.md  angular.json  design.md  eslint.config.mjs  karma.conf.js  package-lock.json  package.json  tailwind.config.js  vercel.json
auth-service/: README.md  package.json
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  env.example  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4d40e1551012_drop_owner_id_foreign_key.py  5a1b2c3d4e5f_reset_vote_columns.py  6b2c3d4e5f6a_add_performance_indexes.py  a07002d392d6_initial_migration.py
backend/api/: index.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: auth.py  dependencies.py  exceptions.py  invitations.py  middleware.py  realtime_publisher.py  websocket_manager.py
backend/app/database/: connection.py  session.py
backend/app/models/: __init__.py  base.py  game.py  round.py
backend/app/repositories/: __init__.py  base_repository.py  game_repository.py  round_repository.py
backend/app/schemas/: __init__.py  common.py  game.py  invitation.py  round.py
backend/app/services/: __init__.py  email_service.py  game_service.py  round_service.py  scoring_service.py
backend/app/sql/migrations/: 001_initial_schema.sql
backend/app/sql/models/: game.sql  indexes.sql  round.sql
backend/app/sql/queries/: game_queries.py  round_queries.py
backend/app/views/: auth.py  games.py  health.py  invitations.py  notifications.py  rounds.py  websocket.py
backend/tests/: conftest.py  test_game_service.py  test_scoring_service.py
docs/: DESIGN_PROPOSAL_SHADCN_TAILWIND.md  FIGMA_DESIGN_PLAN.md  FIGMA_DESIGN_REFERENCE.md  PERFORMANCE.md  README.md  SECURITY_AUDIT.md  flutter-google-signin-neon-auth.md  migrations.md  neon-auth-api-contract.md
flutter_mobile/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
scripts/: archive.sh  dev.sh  setup.sh
src/: index.html
(+217 files in other folders)
