[project]
name = "whist-game-backend"
version = "1.0.0"
description = "FastAPI backend for Whist card game scoring application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "better-auth>=0.0.1b11",
    "httpx>=0.25.0",
    "pyjwt>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
