[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whist-game-backend"
version = "1.0.0"
description = "FastAPI backend for Whist card game scoring application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "better-auth>=0.0.1b11",
    "httpx>=0.25.0",
    "pyjwt>=2.11.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    "black==23.11.0",
    "ruff==0.1.6",
    "ty>=0.0.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ty.rules]
# Suppress false positives caused by missing/incomplete stubs for SQLAlchemy
# and pydantic-settings (ty 0.0.x doesn't have full support for these yet)
invalid-key = "ignore"
invalid-argument-type = "ignore"
invalid-method-override = "ignore"
